--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,8 @@ utility flex
     justify-content: space-between;
 }
 
+
+
 .wrap{
     flex-wrap: wrap;
 }
@@ -47,3 +49,13 @@ utility body
 header
 ++++++++++++++++++
 */
+
+header{
+    background-color: #0084fd;
+    height: 75px;
+}
+
+
+header .container{
+    line-height: 75px;
+}
