fix struttur jambotron

--- a/css/style.css
+++ b/css/style.css
@@ -57,16 +57,26 @@ li{
     text-align: center;
 }
 
-#button{
-    border: 1px solid;
+.button{
     border-radius: 20px;
     padding: 10px 20px;
+}
+
+a{
+    text-decoration: none;
 }
 
 section:nth-child(even){
     background-color: var(--purple);
 }
+img{
+    display: block;
+}
 
+h2{
+    margin: 40px 0;
+    font-size: 28px;
+}
 /*
 ++++++++++++++++++
 header
@@ -100,6 +110,9 @@ header #dek-menu ul{
 
 header #dek-menu ul li:last-child{
     background-color: white;
+}
+
+#btn-menu{
     color: black;
 }
 
@@ -119,12 +132,43 @@ jumbotron
 */
 #jumbotron{
     padding: 0 1.25rem;
+    padding-top: 40px;
 }
-
+.big-box,
 .box{
     border: 1px solid red;
     border-radius: 10px;
-    width: 100px;
-    height: 100px;
     margin: 10px auto;
+    line-height: 1.5em;
+    padding: 0 30px 0 30px;
+
+}
+
+.box{
+    text-align: center;
+}
+
+.big-box{
+    width: 100%;
+    border: 1px solid;
+   
+}
+
+.big-box .box-img img{
+    width: 100%;
+   margin: 0 auto;
+}
+
+.button-box{
+    margin: 40px 5px;
+    text-align: center;
+    background-color: var(--blue);
+}
+
+#btn-box{
+    color: white;
+}
+
+#apple{
+    margin-right: 10px;
 }
