--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,9 @@ utility flex
 .space-b {
     justify-content: space-between;
 }
-
+.row {
+    flex-direction: column;
+}
 
 /*
 ++++++++++++++++++
@@ -32,7 +34,8 @@ utility body
 */
 
 #jumbotron,
-#strategic-planning {
+#strategic-planning,
+#testimonials {
     padding: 0 1.25rem;
 }
 
@@ -47,9 +50,7 @@ utility body
     --purple: #9792e4;
 }
 
-.row {
-    flex-direction: column;
-}
+
 
 li {
     list-style-type: none;
@@ -79,7 +80,8 @@ h2 {
 }
 
 #jumbotron,
-#strategic-planning {
+#strategic-planning,
+#testimonials {
     margin-top: 100px;
 }
 
@@ -253,29 +255,83 @@ strategic planning
     border-radius: 50%;
     margin-bottom: 20px;
 }
-
-
-
-
+#strategic-planning .container-big .big-box:last-child{
+    margin-bottom: 60px;
+}
 @media screen and (min-width: 992px) {
     #strategic-planning .row{
         flex-direction: row;
-        flex-wrap: wrap;
         justify-content: space-between;
+        align-items: flex-end;
+    }
+    #strategic-planning .container-big{
+        max-width: 900px;
     }
     #strategic-planning .container-big .big-box {
         width: calc(100% / 2);
+       
+    }
+    #strategic-planning .container-big .big-box:last-child img{
+        width: 60%;
+        margin: 0 auto;
     }
     #strategic-planning .container-big .big-box:first-child .box-img{
-        padding-top: 100px;
         padding-bottom: 140px;
+        padding-top: 50px;
     }
     #strategic-planning .container-big .big-box:last-child{
-        margin-top: 350px;
+        margin-top: 175px;
+        
     }
     #strategic-planning .container-big .big-box:last-child .box-img p{
         font-style: oblique;
     }
+    #strategic-planning .container-big .big-box:first-child p{
+        margin-bottom: 60px;
+    }
+}
 
+/*
+++++++++++++++++++
+Testimonials
+++++++++++++++++++
+*/
 
+h4{
+    font-size: 25px;
+}
+
+h2{
+    color: var(--purple);
+}
+
+#img-testimonial img{
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    padding: 20px 10px;
+    margin: 0 auto;
+}
+
+#testimonials .box-text,
+#testimonials .big-box{
+    text-align: center;
+}
+
+#testimonials .big-box .testimonials{
+    background-color: var(--purple);
+    border-radius: 35px;
+    margin-bottom: 30px;
+    padding: 0 10px 20px 10px;
+    color: white;
+}
+
+#testimonials .big-box p::before{
+    content: "\201C";
+    font-size: 50px;
+}
+
+#testimonials .big-box p::after{
+    content: "\201D";
+    font-size: 50px;
 }
